# ddp_pkg_release

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: ad_config.csv  ad_config_city.csv  config.csv  config_ad_greedy.csv  config_ad_greedy_test.csv  config_batch_highd.csv  config_bothbatch_highd.csv  config_d90_fixedgreedys.csv  config_delete.csv  config_full_ad.csv  config_full_ad_V1.csv  config_full_ad_v2.csv  config_shadow_sweep_d10_naive.csv  config_shadow_sweep_d120.csv  config_shadow_sweep_d150.csv  config_shadow_sweep_d150_pb.csv  config_shadow_sweep_d20_naive.csv  config_shadow_sweep_d240_pb.csv  config_shadow_sweep_d300.csv  config_shadow_sweep_d300_pb.csv  config_shadow_sweep_d30_naive.csv  config_shadow_sweep_d40_naive.csv  config_shadow_sweep_d450_pb.csv  config_shadow_sweep_d50_naive.csv  config_shadow_sweep_d600_pb.csv  config_shadow_sweep_d60_naive.csv  config_shadow_sweep_d90-120-180_pb.csv  config_shadow_sweep_d90.csv  config_test7.csv
docs/: average_dual_pipeline.md  new_script_plan.md
scripts/: batch_merge_meituan.py  combine_meituan_results.py  generate_synth_config.py  plot_shadow_sweep.py  run_meituan_average_duals_grid.py  run_meituan_shadow_sweep.py  run_meituan_shadow_sweep_config.py  run_meituan_shadow_sweep_parallel.py  run_meituan_sweep.py  transform_ad_duals_coords.py  update_meituan_greedy_results.py
src/ddp/: model.py
src/ddp/_vendor/: h3lite.py
src/ddp/algorithms/: potential.py
src/ddp/engine/: opt.py  sim.py
src/ddp/mappings/: __init__.py  h3_pairs.py  uniform_grid.py
src/ddp/results/: __init__.py  append_csv.py  combine.py
src/ddp/scripts/: __init__.py  aggregate_results.py  average_duals.py  bench_opt_methods.py  build_average_duals.py  build_hd_dataset.py  combine_synth_results.py  compare_hd_stats.py  convert_area6_shadow_csv.py  csv_loader.py  generate_ad_config.py  generate_config.py  generate_n_run.py  inspect_average_duals.py  meituan_area6_shadow_sweep.py  meituan_average_duals.py  meituan_shadow_sweep.py  meituan_shadow_sweep_parallel.py  merge_opt_into_results.py  merge_policy_results.py  merge_policy_results_meituan.py  mwe_01.py  mwe_02.py  plot_many.py  plot_results.py  plot_shadow_sweep.py  plot_sweep.py  run.py  run_ad_from_config.py  run_demo.py  run_from_config.py  run_many.py  shadow_sweep.py  shadow_sweep_parallel.py  sweep_param.py  trace_available.py
src/ddp/utils/: __init__.py  logging_utils.py  metadata.py
tests/: test_build_average_duals.py  test_csv_job_loader.py  test_greedyx_prescreen.py  test_h3_pairs.py  test_inspect_average_duals.py  test_job_dispatch_csv.py  test_meituan_average_duals.py  test_meituan_shadow_sweep_parallel.py  test_plot_results_labels.py  test_plot_shadow_sweep.py  test_run_ad_from_config.py  test_run_ad_neighbors.py  test_run_cli.py  test_run_cli_ad_resolutions.py  test_run_gamma_columns.py  test_run_meituan_average_duals_grid.py  test_run_precomputed_ad.py  test_uniform_grid_mapping.py
tests/data/: sample_jobs.csv
