[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddp"
version = "0.1.0"
description = "Dynamic Delivery Pooling (teaching repo)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
  "numpy>=1.24",
  "networkx>=3.0",
  "pulp>=2.7",
  "matplotlib>=3.8",
  "tqdm>=4.66",
  "pandas>=2.1",
  "h3>=3.7",
  "folium>=0.15"
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]

[project.urls]
Repository = "https://github.com/<you>/<repo>"

[project.scripts]
ddp-mwe01 = "ddp.scripts.mwe_01:main"
ddp-mwe02 = "ddp.scripts.mwe_02:main"
ddp-many = "ddp.scripts.run_many:main"
ddp-run   = "ddp.scripts.run:main"
ddp-sweep = "ddp.scripts.sweep_param:main"
ddp-plot  = "ddp.scripts.plot_results:main"
ddp-plot-sweep = "ddp.scripts.plot_sweep:main"
ddp-bench-opt = "ddp.scripts.bench_opt_methods:main"
ddp-shadow-sweep = "ddp.scripts.shadow_sweep:main"
ddp-shadow-sweep-parallel = "ddp.scripts.shadow_sweep_parallel:main"
ddp-plot-shadow-sweep = "ddp.scripts.plot_shadow_sweep:main"
ddp-trace-available = "ddp.scripts.trace_available:main"
ddp-inspect-average-duals = "ddp.scripts.inspect_average_duals:main"

[tool.setuptools.packages.find]
where = ["src"]
